[package]
name = "mbot"
version = "0.1.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
serenity = { version = "0.9.2", features = ["framework", "standard_framework"] }
tokio = { version = "0.2", features = ["full"] }
mice = { path = "./mice", features = ["format_use_nfmt"] }
nom = "5.0"
rand = "0.7"
once_cell = "1.4"
chrono = "0.4.11"
fehler = { version = "1", optional = true }
thiserror = "1"
indexmap = "1.4"
log = "0.4.8"
foretry = { git = "https://github.com/Monadic-Cat/foretry.git" }
env_logger = "0.7"
comfy-table = { version = "1", optional = true }
pulldown-cmark = { git = "https://github.com/Monadic-Cat/pulldown-discordmark.git", optional = true }
plotters-bitmap = { version = "0.3.0", optional = true }
png = { version = "0.16.8", optional = true }

[dependencies.plotters]
version = "0.3.0"
optional = true
default-features = false
features = ["bitmap_encoder", "histogram", "ttf"]

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = ["runtime-tokio", "macros", "sqlite"]
optional = true
# [dependencies.sqlx]
# git = "https://github.com/Monadic-Cat/sqlx.git"
# branch = "sqlite-code-owo"
# default-features = false
# features = [ "runtime-tokio", "macros", "sqlite" ]
# optional = true

[build-dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote = "1"
proc-macro2 = "1"
titlecase = "1.1.0"

[features]
default = ["bot_commands", "cli_control", "internal_rolls", "maddie_tools", "plotting"]
bot_commands = []
db = ["sqlx"]
# This feature is incomplete.
# This feature has been intentionally broken.
turns_db = ["db", "fehler", "comfy-table"]
# This feature is incomplete.
control_socket = []
internal_rolls  = ["pulldown-cmark"]
# This feature implies the bot_commands feature,
# because all it does is provide bot commands.
# Integration of some Maddie features.
# In particular, Masks Move commands.
# Maddie Repo: https://github.com/harkano/maddie
maddie_tools = ["bot_commands"]

# This feature adds support for plotting the probability
# density distributions of dice expressions.
plotting = ["plotters", "plotters-bitmap", "png"]

# I believe some parts of the cli_control feature may violate
# the Discord Terms of Service, so tread with care.
# However, configuration at runtime is in no way disallowed,
# so I believe this feature to have some merit.
# In addition, this and the pending control_socket feature
# will likely be the only ways to cleanly shutdown the SQLx
# database connection pool run by the turns_db feature.
cli_control = []
static_token = []

[profile.release]
# panic = "abort" # Remove some panic unwinding machinery.
lto = true # Link Time Optimization
# opt-level = "z" # Optimize for size. Default is "3".
codegen-units = 1 # Make less parallel permit more optimizations. Default is 16.

[workspace]
members = ["slash", "mice"]
