[package]
name = "mbot"
version = "0.0.1"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"


# Using the same path for both library and binary targets
# is intentional, as `mbot` is primarily a binary crate.
# I only want to use it as a library for the purpose
# of fuzzing it.
[lib]
path = "src/main.rs"

[[bin]]
name = "mbot"
path = "src/main.rs"

[dependencies]
serenity = { version = "0.10.5", features = ["framework", "standard_framework"] }
tokio = { version = "1", features = ["full"] }
mice = { path = "./mice", features = ["format_use_nfmt"] }
nom = "5.0"
rand = "0.7"
once_cell = "1.7.2"
chrono = "0.4.11"
fehler = { version = "1", optional = true }
thiserror = "1"
indexmap = "1.4"
log = "0.4.8"
foretry = { git = "https://github.com/Monadic-Cat/foretry.git" }
env_logger = "0.7"
comfy-table = { version = "1", optional = true }
pulldown-cmark = { git = "https://github.com/Monadic-Cat/pulldown-discordmark.git", optional = true }
plotters-bitmap = { version = "0.3.0", optional = true }
png = { version = "0.16.8", optional = true }
libc = { version = "0.2.93", optional = true }
parking_lot = { version = "0.11.1", features = ["send_guard"] }
httparse = { version = "1.4.1", optional = true }
rust-embed = { version = "5.9.0", optional = true }

[dependencies.reloadable-plotter]
path = "./reloadable-plotter"
default-features = false
features = []
optional = true

[dependencies.plotters]
version = "0.3.0"
optional = true
default-features = false
features = ["bitmap_encoder", "histogram", "ttf"]

[build-dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote = "1"
proc-macro2 = "1"
titlecase = "1.1.0"

[features]
default = ["bot_commands", "cli_control", "controller", "internal_rolls", "maddie_tools", "plotting", "static_plotter"]
bot_commands = []
db = []
internal_rolls  = ["pulldown-cmark"]
# This feature implies the bot_commands feature,
# because all it does is provide bot commands.
# Integration of some Maddie features.
# In particular, Masks Move commands.
# Maddie Repo: https://github.com/harkano/maddie
maddie_tools = ["bot_commands"]

# This feature adds support for plotting the probability
# density distributions of dice expressions.
# Also, incurs the additional system dependencies of
plotting = ["reloadable-plotter"]

# This feature gates unsafe code used to make the dice roll PDF plotter hot reloadable.
reloadable_plotter = ["libc", "plotting", "reloadable-plotter/ffi_external"]

# This feature statically links the dice roll PDF plotter.
# Ideally, no unsafe code should be enabled via this cfg path. (Not the case yet.)
static_plotter = ["plotting", "reloadable-plotter/actual_plotter"]

# I believe some parts of the cli_control feature may violate
# the Discord Terms of Service, so tread with care.
# However, configuration at runtime is in no way disallowed,
# so I believe this feature to have some merit.
cli_control = []
controller = ["httparse", "rust-embed", "cli_control"]

static_token = []

[profile.release]
# panic = "abort" # Remove some panic unwinding machinery.
lto = true # Link Time Optimization
# opt-level = "z" # Optimize for size. Default is "3".
codegen-units = 1 # Make less parallel permit more optimizations. Default is 16.

[workspace]
members = ["mice", "proc_macro_helpers", "reloadable-plotter", "cmice"]
