[package]
name = "cmice"
version = "0.1.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
repository = "https://github.com/Monadic-Cat/cmice"
documentation = "https://docs.rs/cmice"
description = "CLI mice"
keywords = ["dice", "roll", "parse", "cli"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
mice = { path = "../mice" }
rand = "0.7.3"
