[package]
name = "mice"
version = "0.10.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
repository = "https://github.com/Monadic-Cat/mice"
documentation = "https://docs.rs/mice"
description = "messing with dice"
readme = "README.md"
keywords = ["dice", "roll", "parse"]
license = "AGPL-3.0-or-later"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "5.0.0"
rand = "0.7.0"
thiserror = "1.0.6"
wasm-bindgen  = { version = "0.2.50", optional = true }
itoa = "0.4.7"

[dev-dependencies]
criterion = "0.3"
wasm-bindgen = "0.2.50"
js-sys = "0.3.27"
itertools = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = ["thread_rng"]

# The default of the thread RNG
# is very convenient, but unavailable
# on certain platforms.
# For example, it is not available in WebAssembly.
thread_rng = []

wasm = ["wasm-bindgen"]
# Features:
#  - wasm

# WIP.
# Switch out the old FormatOptions backend
# to use nfmt through a compatibility layer.
# Likely much faster, but not necessarily exactly
# compatible yet.
format_use_nfmt = []
