[package]
name = "mice"
version = "0.10.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
repository = "https://github.com/Monadic-Cat/mice"
documentation = "https://docs.rs/mice"
description = "messing with dice"
readme = "README.md"
keywords = ["dice", "roll", "parse"]
license = "AGPL-3.0-or-later"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "5.0.0"
rand = "0.7.0"
thiserror = "1.0.6"
wasm-bindgen  = { version = "0.2.50", optional = true }
itoa = "0.4.7"
core_extensions = "0.1.20"
id-arena = "2.2.1"
proc_macro_helpers = { path = "../proc_macro_helpers" }
checked = "0.5.0"
once_cell = "1.7.2"
fixed-str = { git = "https://github.com/Monadic-Cat/fixed-str", branch = "melo" }

[dev-dependencies]
criterion = "0.3"
wasm-bindgen = "0.2.50"
js-sys = "0.3.27"
itertools = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.7.0", features = ["small_rng"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[[bench]]
name = "my_benchmark"
harness = false

[features]
default = ["thread_rng"]

# The default of the thread RNG
# is very convenient, but unavailable
# on certain platforms.
# For example, it is not available in WebAssembly.
thread_rng = []

wasm = ["wasm-bindgen"]
# Features:
#  - wasm

# WIP.
# Switch out the old FormatOptions backend
# to use nfmt through a compatibility layer.
# Likely much faster, but not necessarily exactly
# compatible yet.
# Note that this feature is not additive,
# so using this may go wrong if any of your dependencies use `mice`
# and depend very specifically on formatter output.
format_use_nfmt = []
