[package]
name = "mice"
version = "0.10.1"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
repository = "https://github.com/Monadic-Cat/mbot/mice"
documentation = "https://docs.rs/mice"
description = "messing with dice"
readme = "README.md"
keywords = ["dice", "roll", "parse"]
license = "AGPL-3.0-or-later"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.7.0"
thiserror = "1.0.6"
itoa = "0.4.7"
core_extensions = { version = "1.3.3", features = ["slices"] }
id-arena = "2.2.1"
proc_macro_helpers = { path = "../proc_macro_helpers", version = "0.0.1", package = "mbot_proc_macro_helpers" }
checked = "0.5.0"
once_cell = "1.7.2"
derive_more = "0.99.16"

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.7.0", features = ["small_rng"] }

[[bench]]
name = "rolling"
harness = false

[[bench]]
name = "formatting"
harness = false

[[bench]]
name = "tree"
harness = false

[features]
default = []
