[package]
name = "proc-macro-utils"
version = "0.1.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.8"
proc-macro2 = "1.0.24"

[lib]
proc-macro = true
