[package]
name = "slash"
version = "0.1.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2"
reqwest = { version = "0.10.10", features = ["rustls-tls"] }
structopt = "0.3.21"
serde = { version = "1.0.118", features = ["derive"] }
ron = "0.6.2"
serde_json = "1.0.60"
serde_repr = "0.1.5"
